--- a/Fronted/index.html
+++ b/Fronted/index.html
@@ -4,20 +4,40 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agencia de Viajes</title>
 </head>
 <body>
-<div class="wrapper">
-          <div class="clash-card barbarian">
-            <div class="clash-card__image clash-card__image--barbarian">
+<div class="card-container">
+          <div class="clash-card paris">
+            <div class="clash-card__image clash-card__image--paris">
               <img src="../img/Paris.jpg" alt="Paris" />
             </div>
             <div class="clash-card__unit-name">París</div>
             <div class="clash-card__unit-description">
               París, la capital de Francia, es una importante ciudad europea y un centro mundial del arte, la moda, la gastronomía y la cultura.
             </div>      
-          </div> <!-- end clash-card barbarian-->
-        </div> <!-- end wrapper -->
+          </div>
+
+          <div class="clash-card roma">
+            <div class="clash-card__image clash-card__image--roma">
+              <img src="../img/Roma.jpg" alt="Roma" />
+            </div>
+            <div class="clash-card__unit-name">Roma</div>
+            <div class="clash-card__unit-description">
+              Roma, la capital de Italia, es una extensa ciudad cosmopolita que tiene a la vista casi 3,000 años de arte, arquitectura y cultura de influencia mundial.
+            </div>      
+          </div>
+
+          <div class="clash-card tokio">
+            <div class="clash-card__image clash-card__image--tokio">
+              <img src="../img/Tokio.jpg" alt="tokio" />
+            </div>
+            <div class="clash-card__unit-name">Tokio</div>
+            <div class="clash-card__unit-description">
+              Tokio, la ajetreada capital de Japón, mezcla lo ultramoderno y lo tradicional, desde los rascacielos iluminados con neones hasta los templos históricos.
+            </div>      
+          </div>
+        </div>
 
 </body>
 </html>
